fix(dev-pipeline): address 3-agent expert review findings — blockers, factual errors, and robustness gaps
- Phase 0: add empty diff / merge conflict / non-git guards, Glob shell fallback
- Fix Quick Mode to include Phase 0 for git diff discovery (BLOCKER)
- Align Agent 1 confidence threshold with aggregator (1-2 suppress, 3-4 report)
- Phase 1: add small-diff optimization (≤50 lines → serial), re-review loop
- Phase 5: add pre-commit hook failure recovery with auto-fix + retry (max 3)
- coding-standards.md: fix 8 factual errors (Google TS, Vue 3, P3C, Java version)
- coding-standards.md: add 12+ missing rules (Compose, Coroutines, PEP 8, Airbnb)
- review-agents.md: strip inline standards from Agent 3, reference single source
- review-checklist.md: full rewrite — confidence scoring, AUTO/ASK, 3-pass review
- Add token-efficient conditional loading for all reference files

BREAKING CHANGE: Agent 3 no longer has inline coding standards — always reads
coding-standards.md. 1B serial review output format now matches 1A exactly.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>